[package]
name = "hexgrep"
version = "0.0.0"
edition = "2021"
license = "MIT"
authors = ["Gabriel Falcão <gabrielteratos@gmail.com>"]
description = "find the position of bytes sequences within binary files matching hexadecimal patterns"
documentation = "https://docs.rs/hexgrep"
readme = "README.md"
homepage = "https://github.com/gabrielfalcao/hexgrep"


[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
hex = { version = "0.4.3", features = ["serde"] }
indicatif = "0.17.7"
iocore = { version = "0.10.0" }
